fix issue with 'done' button and small font size on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@
 body {
     color: white;
     background-color: black;
-    font-size: 1.6em;
+    /* font-size: 1.6em; */
+    font-size: calc(15px + 0.390625vw);
     max-width: 780px;
     margin: auto;
     font-family: "Vecna";
